--- a/_site.yml
+++ b/_site.yml
@@ -7,7 +7,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-
+    - text: "Teaching"
+    - href: teaching.html 
 output:
   html_document:
     theme: paper
