--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,9 @@ navbar:
       href: research.html
     - text: "Teaching"
       href: teaching.html
+    - text: "Coding Tutorials"
+      href: coding_tutorials.html
+
   right:
     - icon: fa-envelope fa-lg
       href: mailto:ckwon@hbs.edu
