--- a/_site.yml
+++ b/_site.yml
@@ -7,7 +7,7 @@ navbar:
       href: research.html
     - text: "Teaching"
       href: teaching.html
-    - text: "Coding Tutorials"
+    - text: "R Coding Tutorials"
       href: coding_tutorials.html
 
   right:
