--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: research.html
     - text: "Teaching"
       href: teaching.html
+    - text: "CV/Resume"
+      href: CV.html 
 
   right:
     - icon: fa-envelope fa-lg
